# osc-sdk-python

./: .gitignore  .gitmodules  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  example.py  local-tests.sh  oapi_credentials.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  shell.nix  tox.ini
.github/: dependabot.yml
.github/actions/setup-test/: action.yml
.github/scripts/: release-build.sh  release-pr.sh  release-push.sh
.github/workflows/: build.yml  code-check-identified.yml  code-check.yml  codeql.yml  cred-scan.yml  github-sanity-scan.yml  publish.yml
docs/: examples.md  troubleshooting.md
osc_python_sdk/: call.py  credentials.py  oapi.yaml  outscale_gateway.py  requester.py
osc_sdk_python/: __init__.py  async_call.py  async_requester.py  async_retry.py  authentication.py  call.py  credentials.py  limiter.py  outscale_gateway.py  problem.py  requester.py  retry.py  version.py
osc_sdk_python/codegen/: __init__.py  adapters.py  generator.py  ir.py  overlay.py
osc_sdk_python/resources/: gateway_errors.yaml  outscale.yaml
osc_sdk_python/resources/oks/: api.yaml  cfg.yaml  patch.yaml
osc_sdk_python/resources/osc/: api.yaml  patch.yaml
osc_sdk_python/runtime/: __init__.py  request.py  transport.py
osc_sdk_python/runtime/async_/: __init__.py  call.py  requester.py  retry.py
osc_sdk_python/runtime/sync/: __init__.py  call.py  requester.py  retry.py
scripts/: setup_venv.sh  test_bandit.sh  test_pylint.sh  upload_package.sh
tests/: 00_simple-listing.py  01_human_readable_errors.py  0_simple-listing.py  build.sh  integration_utils.py  run.sh  test_async_vm.py  test_authentication_integration.py  test_bandit.sh  test_eim_user.py  test_exceptions.py  test_exceptions_500.py  test_exeptions.py  test_exeptions_500.py  test_int.sh  test_keypair.py  test_load_balancer_backend.py  test_log.py  test_manual_aksk.py  test_net.py  test_net_subnet.py  test_password.py  test_problems.py  test_proxy.py  test_retry.py  test_security_group.py  test_snapshot.py  test_vm.py  test_volume.py
tests/async_/: __init__.py  test_async_gateway.py  test_async_oks.py  test_async_retry.py  test_async_security_group.py  test_async_typed_oks.py  test_async_vm.py
tests/async_/oks/: __init__.py  test_async_oks_project.py
tests/async_/osc/: __init__.py  async_integration_utils.py  test_async_eim_user.py  test_async_exceptions.py  test_async_exceptions_500.py  test_async_keypair.py  test_async_limiter.py  test_async_load_balancer_backend.py  test_async_log.py  test_async_manual_aksk.py  test_async_net.py  test_async_net_subnet.py  test_async_password.py  test_async_retry.py  test_async_security_group.py  test_async_snapshot.py  test_async_vm.py  test_async_volume.py
tests/sync/: __init__.py  test_eim_user.py  test_exceptions.py  test_exceptions_500.py  test_keypair.py  test_load_balancer_backend.py  test_log.py  test_manual_aksk.py  test_net.py  test_net_subnet.py  test_password.py  test_snapshot.py  test_vm.py
tests/sync/oks/: __init__.py  test_oks_project.py
tests/unit/: test_authentication.py  test_client_lifecycle.py  test_codegen_openapi_adapter.py  test_codegen_overlay.py  test_profile_config.py  test_request_spec.py  test_transport.py
(+17 files in other folders)
