[metadata]
name = osc_sdk_python
version = file: osc_sdk_python/VERSION
author = Outscale SAS
author_email = opensource@outscale.com
description = SDK for Outscale API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/outscale/osc_sdk_python
project_urls =
    Bug Tracker = https://github.com/outscale/osc_sdk_python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = osc_sdk_python
packages = find:
python_requires = >=3.6

[options.packages.find]
where = osc_sdk_python